# AcmAlgos

./: .gitignore  CMakeLists.txt  README.md  templeate.cpp
.github/workflows/: c-cpp.yml
Acwing/: dijkstra.cpp  floyd.cpp  quick_sort.cpp
CPP/DesignPattern/: singleletton.cpp
CPP/LanguageFeature/: memory_align.cpp  size.cpp  virtual_function.cpp
CPP/Socket/: Server.cpp
CPP/SystemDesign/: lru.cpp  ringbuffer.cpp
CPP/Thread/: atomic.cpp  mutex.cpp  print_ABC.cpp  print_number.cpp
HuaweiOD/: 2025B_2.cpp  DoubleB_1.cpp  DoubleB_11.cpp  DoubleB_12.cpp  DoubleB_23.cpp  DoubleB_5.cpp  DoubleB_6.cpp  DoubleB_9.cpp  DoubleC_1.cpp  DoubleC_10.cpp  DoubleC_13.cpp  DoubleC_15.cpp  DoubleC_18.cpp  DoubleC_19.cpp  DoubleC_2.cpp  DoubleC_20.cpp  DoubleC_22.cpp  DoubleC_24.cpp  DoubleC_25.cpp  DoubleC_26.cpp  DoubleC_27.cpp  DoubleC_3.cpp  DoubleC_30.cpp  DoubleC_31.cpp  DoubleC_33.cpp  DoubleC_36.cpp  DoubleC_37.cpp  DoubleC_39.cpp  DoubleC_4.cpp  DoubleC_40.cpp  DoubleC_41.cpp  DoubleC_42.cpp  DoubleC_44.cpp  DoubleC_45.cpp  DoubleC_48.cpp  DoubleC_49.cpp  DoubleC_5.cpp  DoubleC_50.cpp  DoubleC_51.cpp  DoubleC_55.cpp  (+12 more)
HuaweiOD/DoubleB/: 10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  7.cpp  8.cpp  9.cpp
HuaweiOD/DoubleC/: 1.cpp  10.cpp  100.cpp  101.cpp  102.cpp  103.cpp  104.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  11.cpp  110.cpp  111.cpp  112.cpp  113.cpp  114.cpp  115.cpp  116.cpp  117.cpp  118.cpp  119.cpp  12.cpp  120.cpp  121.cpp  122.cpp  123.cpp  124.cpp  125.cpp  126.cpp  127.cpp  128.cpp  13.cpp  138.cpp  14.cpp  145.cpp  153.cpp  16.cpp  17.cpp  (+57 more)
(+10 files in other folders)
